--- a/index.html
+++ b/index.html
@@ -112,17 +112,22 @@
     <section id="contact" class="pageBody">
         <div class="container-fluid text-center text-light px-5">
             <h2>Contacto</h2>
+            <hr>
+            <h2>FORMULARIO</h2>
         </div>
     </section>
 
-    <footer class="text-center">
+    <footer class="text-center text-light">
         <div class="container">
             <div class="row">
-                <div class="col-6">
+                <div class="col">
                     <h2>VIAJES CHILE</h2>
                 </div>
-                <div class="col-4">
-                    
+                <div class="col">
+                    <i class="fab fa-github-square fa-3x px-2"></i>
+                    <i class="fab fa-linkedin fa-3x px-2"></i>
+                    <i class="fab fa-twitter-square fa-3x px-2"></i>
+                    <i class="fab fa-facebook-square fa-3x px-2"></i>
                 </div>
             </div>
         </div>
