Sección de destacados completada

--- a/index.html
+++ b/index.html
@@ -101,10 +101,39 @@
     </section>    
 
     <section id="trends" class="pageBody pb-2">
-        <div class="container-fluid text-center text-light py-5">
+        <div class="container-fluid text-left text-light py-5">
             <h2 class="pt-5 pb-1">Destacados</h2>
             <hr>
-
+            <div class="card-deck px-5">
+                <div class="card">
+                    <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title font-weight-normal">Lorem ipsum dolor sit amet.</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas assumenda dolore neque recusandae aliquid error tempore consectetur iusto, quo vel, rerum nisi eligendi consequatur amet ullam magni doloribus molestias quod libero dicta quam sunt perferendis. Aliquid iure ad necessitatibus hic?</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/img/card2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title font-weight-normal">Lorem ipsum dolor sit amet.</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas assumenda dolore neque recusandae aliquid error tempore consectetur iusto, quo vel, rerum nisi eligendi consequatur amet ullam magni doloribus molestias quod libero dicta quam sunt perferendis. Aliquid iure ad necessitatibus hic?</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/img/card3.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title font-weight-normal">Lorem ipsum dolor sit amet.</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas assumenda dolore neque recusandae aliquid error tempore consectetur iusto, quo vel, rerum nisi eligendi consequatur amet ullam magni doloribus molestias quod libero dicta quam sunt perferendis. Aliquid iure ad necessitatibus hic?</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title font-weight-normal">Lorem ipsum dolor sit amet.</h5>
+                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas assumenda dolore neque recusandae aliquid error tempore consectetur iusto, quo vel, rerum nisi eligendi consequatur amet ullam magni doloribus molestias quod libero dicta quam sunt perferendis. Aliquid iure ad necessitatibus hic?</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
