--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
     <section id="trends" class="pageBody pb-2">
         <div class="container-fluid text-left text-light py-5">
-            <h2 class="pt-5 pb-1">Destacados</h2>
+            <h2 class="pt-5 pb-1 text-center">Destacados</h2>
             <hr>
             <div class="card-deck px-5">
                 <div class="card">
@@ -170,7 +170,7 @@
 
             <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
             <script src="https://code.jquery.com/jquery-3.5.1.js"
-        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+            integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
                 crossorigin="anonymous"></script>
