--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="assets/img/viajes.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Joseph Murillo">
     <meta name="description" content="Agencia de viajes Chile">
